// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index test suite should render properly 1`] = `
<ContextProvider
  value={
    Object {
      "black": "#000",
      "failedColor": "#FF5252",
      "primaryColor": "#005ECB",
      "reduxColor": "#B47CFF",
      "secondaryColor": "#F3F4F6",
      "secondaryDarkColor": "#E5E7EB",
      "secondaryLightColor": "#F9FAFB",
      "successColor": "#69F0AE",
      "textColorFour": "#4B5563",
      "textColorOne": "#111827",
      "textColorThree": "#374151",
      "textColorTwo": "#1F2937",
      "warningColor": "#FFAB40",
      "white": "#FFF",
    }
  }
>
  <ForwardRef(SafeAreaView)>
    <Component
      animationType="slide"
      hardwareAccelerated={false}
      onRequestClose={[Function]}
      visible={false}
    >
      <Main
        clearAll={[Function]}
        maxRequests={100}
        nRequests={Array []}
        onPress={[Function]}
        onPressClose={[Function]}
        onPressDetail={[Function]}
        reduxActions={Array []}
        rnRequests={Array []}
        testId="mainScreen"
      />
    </Component>
  </ForwardRef(SafeAreaView)>
</ContextProvider>
`;

exports[`Index test suite should render properly visible and enabled 1`] = `
<ContextProvider
  value={
    Object {
      "black": "#000",
      "failedColor": "#FF5252",
      "primaryColor": "#005ECB",
      "reduxColor": "#B47CFF",
      "secondaryColor": "#F3F4F6",
      "secondaryDarkColor": "#E5E7EB",
      "secondaryLightColor": "#F9FAFB",
      "successColor": "#69F0AE",
      "textColorFour": "#4B5563",
      "textColorOne": "#111827",
      "textColorThree": "#374151",
      "textColorTwo": "#1F2937",
      "warningColor": "#FFAB40",
      "white": "#FFF",
    }
  }
>
  <ForwardRef(SafeAreaView)>
    <Component
      animationType="slide"
      hardwareAccelerated={false}
      onRequestClose={[Function]}
      visible={false}
    >
      <Main
        clearAll={[Function]}
        maxRequests={100}
        nRequests={Array []}
        onPress={[Function]}
        onPressClose={[Function]}
        onPressDetail={[Function]}
        reduxActions={Array []}
        rnRequests={Array []}
        testId="mainScreen"
      />
    </Component>
  </ForwardRef(SafeAreaView)>
</ContextProvider>
`;

exports[`Index test suite should render properly visible, enabled and maxRequest 1`] = `
<ContextProvider
  value={
    Object {
      "black": "#000",
      "failedColor": "#FF5252",
      "primaryColor": "#005ECB",
      "reduxColor": "#B47CFF",
      "secondaryColor": "#F3F4F6",
      "secondaryDarkColor": "#E5E7EB",
      "secondaryLightColor": "#F9FAFB",
      "successColor": "#69F0AE",
      "textColorFour": "#4B5563",
      "textColorOne": "#111827",
      "textColorThree": "#374151",
      "textColorTwo": "#1F2937",
      "warningColor": "#FFAB40",
      "white": "#FFF",
    }
  }
>
  <ForwardRef(SafeAreaView)>
    <Component
      animationType="slide"
      hardwareAccelerated={false}
      onRequestClose={[Function]}
      visible={false}
    >
      <Main
        clearAll={[Function]}
        maxRequests={20}
        nRequests={Array []}
        onPress={[Function]}
        onPressClose={[Function]}
        onPressDetail={[Function]}
        reduxActions={Array []}
        rnRequests={Array []}
        testId="mainScreen"
      />
    </Component>
  </ForwardRef(SafeAreaView)>
</ContextProvider>
`;
